--- a/PDL.Synthetical.Infrastructure/PDL.Synthetical.Infrastructure.csproj
+++ b/PDL.Synthetical.Infrastructure/PDL.Synthetical.Infrastructure.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\DapperExtensions.1.5.0\lib\net45\DapperExtensions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Intertech.Facade.DapperParameters, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DapperParameters.1.0.4\lib\net40\Intertech.Facade.DapperParameters.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
