--- a/PDL.Synthetical.Infrastructure/packages.config
+++ b/PDL.Synthetical.Infrastructure/packages.config
@@ -3,4 +3,5 @@
   <package id="Dapper" version="1.50.2" targetFramework="net452" />
   <package id="Dapper-Async" version="1.03" targetFramework="net452" />
   <package id="DapperExtensions" version="1.5.0" targetFramework="net452" />
+  <package id="DapperParameters" version="1.0.4" targetFramework="net452" />
 </packages>
